[package]
name = "a_light_in_the_dark"
version = "0.1.0"
authors = ["Justin Hendrick <justinjhendrick@gmail.com>"]

[dependencies]
piston = "0.36.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.45.3"
piston2d-opengl_graphics = "0.52.1"

nphysics2d = "0.7.2"
nalgebra = "0.13.1"
ncollide = "0.13.0"

